2009-03-10  Rodney Dawes  <dobey@gnome.org>

	* 48x48/actions/Makefile.am:
	* 48x48/actions/appointment-new.png:
	* 48x48/actions/mail-message-new.png:
	* 48x48/actions/mail-send-receive.png:
	Removed some duplicate icons that are old style

2009-02-17  Rodney Dawes  <dobey@gnome.org>

	* configure.in:
	Up version to 2.25.91 for release

2009-02-11  Rodney Dawes  <dobey@gnome.org>

	* configure.in:
	Up version to 2.25.90 for release

2009-01-26  Jakub Steiner <jimmac@ximian.com>

	* process-working: replace the spinner. Addresses bug #558367

2008-09-23  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.24.0 for release

2008-09-09  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.92 for release

2008-09-08 Andreas Nilsson <andreas@imendio.com>
	
	* {16x16,22x22,24x24,32x32,scalable}/apps/preferences-desktop-accessibility:
	Changed the metaphor of the accessibility icon as requested by the a11y team.	

2008-09-03  Jakub Steiner <jimmac@ximian.com>

	* src/preferences-desktop-accessibility.svg: accessibility icon
	for control center. Includes high res, installing to 256x256

2008-08-29  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.91 for release

2008-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.90 for release

2008-08-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* scalable/places/Makefile.am: Fixed typo that broke the
	build: user-bookmark should be user-bookmarks.

2008-08-13  Andreas Nilsson  <andreas@imendio.com>

	* {16x16,22x22,24x24,32x32,scalable}/places/user-bookmarks.png:
	added user-bookmarks icon based on bookmark-new

2008-07-21  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.3 for release

2008-06-17  Lapo Calamandrei  <calamandrei@gmail.com>

	* {32x32,48x48}/actions/zoom* : little refresh for a more consistent look.

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* 48x48/apps/Makefile.am: