@@ -147,6 +147,7 @@ scalable/Makefile
 32x32/stock/Makefile
 32x32/stock/generic/Makefile
 48x48/actions/Makefile
+48x48/animations/Makefile
 48x48/apps/Makefile
 48x48/devices/Makefile
 48x48/filesystems/Makefile
