@@ -1,5 +1,12 @@
 2009-03-10  Rodney Dawes  <dobey@gnome.org>
 
+	* 48x48/animations:
+	Add a 48x48 of the new process-working icon to finish off #558367
+
+	Fixes #558367
+
+2009-03-10  Rodney Dawes  <dobey@gnome.org>
+
 	* 48x48/actions/Makefile.am:
 	* 48x48/actions/appointment-new.png:
 	* 48x48/actions/mail-message-new.png:
